# polyfon

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: cll.md  crv.md  hmm.md  mip.md  mpr.md  obi.md  pfr.md  pmr.md  rom.md  sla.md  tde.md  vit.md  vpx.md  wdm.md
dry-runs/0001-2026-06-07-mip/: notes.md
polyfon/: config.py  database.py  models.py
polyfon/collector/: book_collector.py  market_discovery.py  orchestrator.py  spot_collector.py
polyfon/execution/: engine.py  shadow_runner.py
polyfon/pricing/: fair_probability.py  volatility.py
polyfon/strategies/: __init__.py  base.py  cll.py  crv.py  evt.py  hmm.py  mip.py  mpr.py  obi.py  pfr.py  pmr.py  rom.py  sla.py  tde.py  vit.py  vpx.py  wdm.py
polyfon/utils/: clock.py  fees.py
prompts/: fix_book_stale_persistence_and_task_lifecycle.md  fix_dry_run_historical_fill_and_filters.md  fix_remaining_historical_context_book_time_alignment.md  review_and_fix_polymarket_subscription_lifecycle.md
reviews/: 2026-05-23_collection_and_wdm_review.md
scripts/: run.py
