[project]
name = "polyfon"
version = "0.1.0"
description = "Quantitative trading system for 5-minute crypto prediction markets on Polymarket"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "httpx[socks]>=0.27.0",
    "websockets>=12.0",
    "python-socks>=2.5.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "typing-extensions>=4.10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
polyfon = "scripts.run:main"

[tool.setuptools.packages.find]
include = ["polyfon*", "scripts*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
